third_party/move/tools/move-asm/tests/assembler/call_same_module_undef.exp
processed 1 task
task 0 lines 1-10:  publish --print-bytecode
Error: error: undeclared function `f1` in `0000000000000000000000000000000000000000000000000000000000000066::test`
  ┌─ test:7:5
  │
7 │     call f1
  │     ^^^^^^^


